# kenzy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Kenzie.onnx  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  build_pypi.sh  install.sh  ken_zee.onnx  kenzie.onnx  kenzie.tflite  mkdocs.yml  requirements.txt  setup.cfg  setup.py
docs/: index.md  installation.audio.md  installation.basic.md  installation.raspberrypi.md  kenzy.communication.md  kenzy.config.md  kenzy.containers.md  kenzy.devices.kasaplug.md  kenzy.devices.listener.md  kenzy.devices.md  kenzy.devices.skillmanager.md  kenzy.devices.speaker.md  kenzy.devices.watcher.md  kenzy.skill.md  kenzy.skills.AboutSkill.md  kenzy.skills.CheckVersionSkill.md  kenzy.skills.FlipACoinSkill.md  kenzy.skills.HelloSkill.md  kenzy.skills.HomeAssistantSkill.md  kenzy.skills.KnockKnockSkill.md  kenzy.skills.MuteSkill.md  kenzy.skills.NewsSkill.md  kenzy.skills.PowerDownSkill.md  kenzy.skills.TellDateTimeSkill.md  kenzy.skills.TellJokeSkill.md  kenzy.skills.ThankYouSkill.md  kenzy.skills.WatcherSkill.md  kenzy.skills.WeatherSkill.md  kenzy.skills.md  kenzy.watcher.train.md
examples/: listener.yml  multi.yml  skillsmanager.yml  speaker.yml  watcher.yml
src/kenzy/: __init__.py  __main__.py  core.py  extras.py  run.py  settings.py  shared.py  skillmanager.py  templates.py
src/kenzy/containers/: __init__.py  brain.py  devicecontainer.py
src/kenzy/data/: ken_zee.tflite
src/kenzy/devices/: __init__.py  kasadevice.py  kasaplug.py  listener.py  speaker.py  watcher.py
src/kenzy/image/: __init__.py  __main__.py  core.py  device.py
src/kenzy/image/resources/mobilenet_v3/: labels.txt
src/kenzy/image/resources/yolov7/: labels.txt
src/kenzy/llm/: __init__.py  __main__.py  device.py
src/kenzy/panels/: __init__.py  form_ui_simple.py  panel.py  settings_ui.py  shared.py
src/kenzy/panels/panel_v1/: __init__.py  __main__.py  form_ui_simple.py  panel.py
src/kenzy/skillmanager/: __init__.py  __main__.py  core.py  device.py
src/kenzy/skills/: core.py
src/kenzy/skills/AboutSkill/: __init__.py
src/kenzy/skills/AboutSkill/vocab/en_us/: human.dialog  human.intent  maker.dialog  maker.intent  real.dialog  real.intent  status.dialog  status.intent  who.dialog  who.intent
src/kenzy/skills/CheckVersionSkill/: __init__.py
src/kenzy/skills/CheckVersionSkill/vocab/en_us/: checkversion.intent
src/kenzy/skills/HelloSkill/: __init__.py
src/kenzy/skills/HelloSkill/vocab/en_us/: hello.dialog  hello.intent
src/kenzy/skills/KnockKnockSkill/: __init__.py
src/kenzy/skills/PowerDownSkill/: __init__.py
src/kenzy/skills/TellDateTimeSkill/: __init__.py
src/kenzy/skills/ThankYouSkill/: __init__.py
src/kenzy/stt/: __init__.py  __main__.py  consumers.py  core.py  device.py  example.py
src/kenzy/tts/: __init__.py  __main__.py  core.py  device.py  example.py  extras.py
src/kenzy/web/: index.html  login.html  template.html  test.html  upnp.xml
(+9 files in other folders)
