[flake8]
ignore = E201,E202,W293,W291,W292 
#,E226,E302,E41
max-line-length = 160
exclude = tests/*
#max-complexity = 10

[metadata]
name = kenzy
author = lnxusr1
author_email = dist@kenzy.ai
url = https://kenzy.ai
download_url = https://kenzy.ai/get/latest/release
version = attr: src.kenzy.VERSION
description = Kenzy.Ai: A synthetic human written in Python
long_description = file: README.rst
keywords = Artificial Intelligence, AI, Personal Assistant
license = MIT
home_page = https://kenzy.ai
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Bug Tracker = https://kenzy.ai/issues
    Changelog = https://kenzy.ai/get/latest/changelog

[build-system]
requires = 
    setuptools
    wheel
    urllib3
    requests
    netifaces
    traceback 
    
[options]
python_requires = >= 3.6
zip_safe = true
include_package_data = true
test_suite = tests
setup_requires = 
    setuptools
    wheel
    urllib3
    requests
    netifaces

install_requires =
    urllib3
    requests
    netifaces

packages = find:
package_dir=
	=src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kenzy = kenzy:__main__
    kenzy-image = kenzy.image:__main__
